# RavenHydroFramework

./: .clang-format  .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  README.md  contributor-licensing-agreement.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: auto-approve-dependabot.yml  codeql.yml  first_pull_request.yml  testing.yml
RavenCaller/: RavenCaller.cpp  RavenCaller.vcxproj  RavenCaller.vcxproj.filters
benchmarking/: Benchmark results.txt  RavenBenchmarking.bat  RavenBenchmarking.sh  RavenBenchmarkingDelete.bat  how_to_benchmark.txt
benchmarking/_InputFiles/Alouette/: ALU.tb0  ALU_2008 Calibration Summary_V1.doc  ALU_obs.csv  Alouette_ws.rvc  Alouette_ws.rvh  Alouette_ws.rvi  Alouette_ws.rvp  Alouette_ws.rvt  Alouette_ws_GaugeWeights.txt  Alouette_ws_Hydrographs.tb0  Alouette_ws_solution.rvc  raven_debug.csv
benchmarking/_InputFiles/Alouette2/: ALUcomp.tb0  ALUgauge.rvt  Alouette2.rvc  Alouette2.rvh  Alouette2.rvi  Alouette2.rvp  Alouette2.rvt  AlouetteObservedFlow.rvt
benchmarking/_InputFiles/Coquitlam/: CQD.tb0  CQD_h.tb0  Coquitlam_Q_d.csv  Coquitlam_Q_h.csv  Coquitlam_ws.rvc  Coquitlam_ws.rvh  Coquitlam_ws.rvi  Coquitlam_ws.rvp  Coquitlam_ws.rvt  Coquitlam_ws_solution.rvc  Raven_errors.txt
benchmarking/_InputFiles/Irondequoit/: Irondequoit.rvc  Irondequoit.rvh  Irondequoit.rvi  Irondequoit.rvp  Irondequoit.rvt  IrondequoitGauge.rvt  IrondequoitObserved.rvt
benchmarking/_InputFiles/LOTW/: Gauge_Weight.txt  LOWRL.rvh  LOWRL.rvi  LOWRL.rvp  LOWRL.rvt
benchmarking/_InputFiles/LOTW/data_obs/: Forced_Inflow_From_LLC.rvt  Forced_Inflow_From_Nam.rvt  Forced_Inflow_From_Rainy.rvt  Gauge_Basin_1.rvt  Gauge_Basin_10.rvt  Gauge_Basin_11.rvt  Gauge_Basin_12.rvt  Gauge_Basin_13.rvt  Gauge_Basin_14.rvt  Gauge_Basin_15.rvt  Gauge_Basin_16.rvt  Gauge_Basin_17.rvt  Gauge_Basin_18.rvt  Gauge_Basin_19.rvt  Gauge_Basin_2.rvt  Gauge_Basin_20.rvt  Gauge_Basin_21.rvt  Gauge_Basin_22.rvt  Gauge_Basin_23.rvt  Gauge_Basin_24.rvt  Gauge_Basin_25.rvt  Gauge_Basin_26.rvt  Gauge_Basin_27.rvt  Gauge_Basin_28.rvt  Gauge_Basin_29.rvt  Gauge_Basin_3.rvt  Gauge_Basin_30.rvt  Gauge_Basin_31.rvt  Gauge_Basin_32.rvt  (+47 more)
benchmarking/_InputFiles/LaJoie/: LAJ.tb0  LAJ_2008 Calibration Summary_V1.doc  LAJ_obs.csv  La_Joie_ws.rvc  La_Joie_ws.rvh  La_Joie_ws.rvi  La_Joie_ws.rvt  La_Joie_ws_Hydrographs.tb0  La_Joie_ws_solution.rvc  raven_debug.csv
benchmarking/_InputFiles/La_Joie/: La_Joie_ws.rvp  La_Joie_ws_GaugeWeights.txt
benchmarking/_InputFiles/Nith/: CanningObservedFlows.rvt  GlenAllan.rvt  Millbank.rvt  NewHamburg.rvt  NewHamburgObservedFlows.rvt  Nith.rvc  Nith.rvh  Nith.rvi  Nith.rvp  Nith.rvt  Stratford.rvt  UWStation.rvt  channel_sections.rvp
benchmarking/_InputFiles/Revelstoke/: REV.tb0  REV_2008 Calibration Summary_V1.doc  REV_obs.csv  Revelstoke_ws.rvc  Revelstoke_ws.rvh  Revelstoke_ws.rvi  Revelstoke_ws.rvp  Revelstoke_ws.rvt  Revelstoke_ws_GaugeWeights.txt  Revelstoke_ws_Hydrographs.tb0  Revelstoke_ws_solution.rvc  raven_debug.csv
benchmarking/_InputFiles/Salmon_GR4J/: raven-gr4j-salmon.rvc  raven-gr4j-salmon.rvi  raven-gr4j-salmon.rvp  raven-gr4j-salmon.rvt
benchmarking/_InputFiles/Salmon_HBV/: raven-hbv-salmon.rvc  raven-hbv-salmon.rvi  raven-hbv-salmon.rvp  raven-hbv-salmon.rvt
benchmarking/_InputFiles/Salmon_HMETS/: raven-hmets-salmon.rvc  raven-hmets-salmon.rvi  raven-hmets-salmon.rvp
benchmarking/_InputFiles/Salmon_MOHYSE/: raven-mohyse-salmon.rvi  raven-mohyse-salmon.rvp
benchmarking/_InputFiles/Williston_Finlay/: WIF.tb0  WIF_2008 Calibration Summary_V1.doc  WIF_obs.csv  Williston_Finlay_ws.rvc  Williston_Finlay_ws.rvh  Williston_Finlay_ws.rvi  Williston_Finlay_ws.rvp  Williston_Finlay_ws.rvt  Williston_Finlay_ws_GaugeWeights.txt  Williston_Finlay_ws_Hydrographs.tb0  Williston_Finlay_ws_solution.rvc
benchmarking/_InputFiles/York/: York_gridded_m_daily_i_daily.rvi  York_gridded_m_daily_i_daily.rvt
benchmarking/_InputFiles/York2/: York2_gridded_m_subdaily_i_subdaily.rvi  York2_gridded_m_subdaily_i_subdaily.rvt  York_Observed_Boulter_hourly.rvt
benchmarking/_InputFiles/York_gridded_m_daily_i_daily/: CaPA_point_weight.txt  CaPA_point_weight_sparse.txt  York_gridded_m_daily_i_daily.rvi  York_gridded_m_daily_i_daily.rvt
benchmarking/_InputFiles/York_nc/: GriddedForcings.txt  York.rvi  York_gridded_m_daily_i_daily.rvi  York_gridded_m_daily_i_daily.rvt  York_gridded_m_daily_i_subdaily.rvi  York_gridded_m_daily_i_subdaily.rvt  York_gridded_m_subdaily_i_daily.rvi  York_gridded_m_subdaily_i_subdaily.rvi  York_gridded_m_subdaily_i_subdaily.rvt  York_nongridded_m_daily_i_daily.rvi  York_nongridded_m_daily_i_subdaily.rvi  York_nongridded_m_daily_i_subdaily.rvt  York_nongridded_m_subdaily_i_daily.rvi  York_nongridded_m_subdaily_i_daily.rvt  York_nongridded_m_subdaily_i_subdaily.rvc  York_nongridded_m_subdaily_i_subdaily.rvh  York_nongridded_m_subdaily_i_subdaily.rvi
benchmarking/_InputFiles/York_nongridded_m_daily_i_daily/: York_nongridded_m_daily_i_daily.rvh  York_nongridded_m_daily_i_daily.rvi  York_nongridded_m_daily_i_daily.rvp
docs/: README.md
docs/examples/: README.md
docs/examples/raven-bmi_nextgen/: README.md
docs/examples/raven_standalone/: README.md
src/: .depend  Abstraction.cpp  Abstraction.h  Advection.cpp  Advection.h  AgeTracers.cpp  AgeTracers.h  Albedo.h  AquiferStack.cpp  Assimilate.cpp  BMI.h  Baseflow.cpp  CMakeLists.txt  CapillaryRise.cpp  ChannelXSect.cpp  ChannelXSect.h  ChemEquilibrium.cpp  ChemEquilibrium.h  CommonFunctions.cpp  ConstituentModel.cpp  ControlStructures.cpp  ControlStructures.h  Convolution.cpp  Convolution.h  CropGrowth.cpp  CropGrowth.h  CustomOutput.cpp  CustomOutput.h  CustomTable.cpp  DDS.cpp  Decay.cpp  Decay.h  DemandExpressionHandling.cpp  DemandGroups.cpp  DemandOptimization.cpp  DemandOptimization.h  Demands.h  DepressionProcesses.cpp  DepressionProcesses.h  Diagnostics.cpp  (+178 more)
(+118 files in other folders)
